# DIMEpy

./: .gitignore  .travis.yml  .~lock.out.csv#  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST  README.md  Testing script.ipynb  balls.py  da.py  example.py  out.csv  out.pkl  requirements.txt  setup.cfg  setup.py  test.pkl  test.py  tests.py
.github/: issue_template.md  pull_request.md
dimepy/: Scans.py  Spectrum.py  SpectrumList.py  SpectrumListProcessor.py  __init__.py  scan.py  scans.py  spectrum.py  spectrumList.py  utils.py
dimepy/data/: mzmlProcessor.py
dimspy/: Analysis.py  Graphics.py  Processor.py  Results.py  Spectrum.py  SpectrumList.py  SpectrumListProcessor.py  __init__.py  dimspy_utils.py  utils.py
docs/: conf.py  example_scripts.rst  getting_started.rst  index.rst  installation.rst  modules.rst
notebooks/: High throughput processing of FIE-MS.ipynb  Testing script.ipynb
tests/: scan_test.py  spectrum_test.py  spectrumlist_test.py
