[metadata]
name = DIMEpy
author = Keiron O'Shea
description = ython package for the high-throughput nontargeted metabolite fingerprinting of nominal mass direct injection mass spectrometry.
version = 1.0.0
url = https://github.com/AberystwythSystemsBiology/DIMEpy
keywords =
  metabolomics
  omics
  processing
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Bio-Informatics
  License :: OSI Approved :: GNU General Public License v2 (GPLv2)
  Operating System :: OS Independent
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE

[options]
python_requires = >= 3.2
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
